# ai-value-tracker

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: telemetry-spec.md  wraith-telemetry-spec.md
examples/: demo-cost.csv  demo-report.csv  weekly-cron.sh
src/avt/: __init__.py  cost.py  html_report.py  report.py  spend.py  telemetry.py  value.py
src/avt/sources/: __init__.py  anthropic_invoice.py  claude_jsonl.py  copilot_admin.py  vendor_csv.py
