[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-value-tracker"
version = "0.1.0"
description = "Measure Claude Code AI spend against customer value, per feature."
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.7",
]

[project.scripts]
avt-spend = "avt.spend:main"
avt-value = "avt.value:main"
avt-report = "avt.report:main"

[tool.setuptools.packages.find]
where = ["src"]
